--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 **/node_modules
-dist
-yarn-error.log
-stats.json
-coverage
-storybook-static
+**/dist
+**/yarn-error.log
+**/stats.json
+**/coverage
 .DS_Store
 .idea
 .env
