Attempting to get plugin store working, running into dependency linking issues

--- a/stub-app/package.json
+++ b/stub-app/package.json
@@ -1,10 +1,6 @@
 {
-  "name": "patternfly-seed",
+  "name": "stub-app",
   "version": "0.0.2",
-  "description": "An open source build scaffolding utility for web apps.",
-  "repository": "https://github.com/patternfly/patternfly-react-seed.git",
-  "homepage": "https://patternfly-react-seed.surge.sh",
-  "license": "MIT",
   "private": true,
   "workspaces": {
     "nohoist": ["**"]
