--- a/stub-app/tsconfig.json
+++ b/stub-app/tsconfig.json
@@ -19,7 +19,8 @@
     "strict": true,
     "paths": {
       "@app/*": ["src/app/*"],
-      "@assets/*": ["node_modules/@patternfly/react-core/dist/styles/assets/*"]
+      "@assets/*": ["node_modules/@patternfly/react-core/dist/styles/assets/*"],
+      "@console/internal/*": ["node_modules/console/frontend/public/*"]
     },
     "importHelpers": true,
     "skipLibCheck": true
