--- a/stub-app/tsconfig.json
+++ b/stub-app/tsconfig.json
@@ -19,7 +19,10 @@
     "strict": true,
     "paths": {
       "@app/*": ["src/app/*"],
-      "@assets/*": ["node_modules/@patternfly/react-core/dist/styles/assets/*"]
+      "@assets/*": ["node_modules/@patternfly/react-core/dist/styles/assets/*"],
+      "@console/internal/*": ["node_modules/console/frontend/public/*"],
+      "@console/dynamic-plugin-sdk": ["node_modules/console/frontend/packages/console-dynamic-plugin-sdk"],
+      "@console/dynamic-plugin-sdk/*": ["node_modules/console/frontend/packages/console-dynamic-plugin-sdk/*"]
     },
     "importHelpers": true,
     "skipLibCheck": true
