--- a/stub-app/package.json
+++ b/stub-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "private": true,
   "scripts": {
+    "postinstall": "[ ! -d './node_modules/console' ] && ln -sv ../../tmp/console ./node_modules/console",
     "prebuild": "yarn run clean",
     "dr:surge": "node dr-surge.js",
     "build": "webpack --config webpack.prod.js && yarn run dr:surge",
@@ -78,12 +79,25 @@
     "@patternfly/react-core": "^4.128.2",
     "@patternfly/react-icons": "^4.10.11",
     "@patternfly/react-styles": "^4.10.11",
+    "@patternfly/react-table": "^4.75.2",
     "@storybook/builder-webpack5": "^6.2.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
+    "classnames": "^2.3.1",
+    "fuzzysearch": "^1.0.3",
+    "i18next": "^21.6.16",
+    "js-base64": "^3.7.2",
     "msw": "^0.39.2",
+    "pluralize": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.7",
     "react-router-last-location": "^2.0.1",
-    "sirv-cli": "^1.0.12"
+    "sirv-cli": "^1.0.12",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "msw": {
     "workerDirectory": "public"
