Still figuring out dependencies

--- a/stub-app/package.json
+++ b/stub-app/package.json
@@ -78,6 +78,7 @@
   "dependencies": {
     "@patternfly/react-core": "^4.128.2",
     "@patternfly/react-icons": "^4.10.11",
+    "@patternfly/react-log-viewer": "^4.51.2",
     "@patternfly/react-styles": "^4.10.11",
     "@patternfly/react-table": "^4.75.2",
     "@storybook/builder-webpack5": "^6.2.9",
@@ -87,17 +88,34 @@
     "apollo-link-http": "^1.5.17",
     "apollo-link-ws": "^1.0.20",
     "classnames": "^2.3.1",
+    "file-saver": "^2.0.5",
     "fuzzysearch": "^1.0.3",
     "i18next": "^21.6.16",
+    "immutable": "^4.0.0",
     "js-base64": "^3.7.2",
+    "lodash-es": "^4.17.21",
     "msw": "^0.39.2",
     "pluralize": "^8.0.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dnd": "^9.4.0",
+    "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^11.16.7",
+    "react-linkify": "^1.0.0-alpha",
+    "react-monaco-editor": "^0.48.0",
+    "react-redux": "^8.0.1",
     "react-router-last-location": "^2.0.1",
+    "react-tagsinput": "^3.19.0",
+    "react-virtualized": "^9.22.3",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "screenfull": "^6.0.1",
     "sirv-cli": "^1.0.12",
-    "subscriptions-transport-ws": "^0.11.0"
+    "subscriptions-transport-ws": "^0.11.0",
+    "xterm": "^4.18.0",
+    "xterm-addon-fit": "^0.5.0"
   },
   "msw": {
     "workerDirectory": "public"
