--- a/stub-app/tsconfig.json
+++ b/stub-app/tsconfig.json
@@ -20,7 +20,10 @@
     "paths": {
       "@app/*": ["src/app/*"],
       "@assets/*": ["node_modules/@patternfly/react-core/dist/styles/assets/*"],
+      "@console/internal": ["node_modules/console/frontend/public"],
       "@console/internal/*": ["node_modules/console/frontend/public/*"],
+      "@console/internal/module/k8s/label-selector": ["node_modules/console/frontend/public/module/k8s/label-selector"],
+      "@console/shared": ["node_modules/console/frontend/packages/console-shared"],
       "@console/shared/*": ["node_modules/console/frontend/packages/console-shared/*"],
       "@console/plugin-sdk": ["node_modules/console/frontend/packages/console-plugin-sdk"],
       "@console/plugin-sdk/*": ["node_modules/console/frontend/packages/console-plugin-sdk/*"],
@@ -31,6 +34,8 @@
       "@console/active-plugins": ["console-dep-stub/active-plugins"],
       "@console/app": ["node_modules/console/frontend/packages/console-app"],
       "@console/app/*": ["node_modules/console/frontend/packages/console-app/*"],
+      "@console/patternfly": ["node_modules/console/frontend/packages/patternfly"],
+      "@console/patternfly/*": ["node_modules/console/frontend/packages/patternfly/*"]
     },
     "importHelpers": true,
     "skipLibCheck": true
